--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -7,8 +7,8 @@
             <div class="row">
               <div class="col-7">
                 <div class="text-primary p-4">
-                  <h5 class="text-primary">Welcome Back !</h5>
-                  <p>Sign in to continue to Skote.</p>
+                  <h5 class="text-primary">Bienvenido!</h5>
+                  <p>Inicia sesión para continuar al  CRM</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -21,7 +21,7 @@
               <a routerLink="/">
                 <div class="avatar-md profile-user-wid mb-4">
                   <span class="avatar-title rounded-circle bg-light">
-                    <img src="assets/images/logo.svg" alt="" class="rounded-circle" height="34">
+                    <img src="assets/images/logo.svg" alt="" class="rounded-circle" height="22">
                   </span>
                 </div>
               </a>
@@ -32,7 +32,7 @@
                 <alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</alert>
 
                 <div class="mb-3">
-                  <label for="email">Email</label>
+                  <label for="email">Correo</label>
                   <input type="email" formControlName="email" class="form-control" id="email" placeholder="Email"
                     [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                   <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="mb-3">
-                  <label for="password">Password</label>
+                  <label for="password">Contraseña</label>
                   <div class="input-group auth-pass-inputgroup">
                     <input type="password" class="form-control" formControlName="password" placeholder="Enter password"
                       [ngClass]="{ 'is-invalid': submitted && f.password.errors }" aria-label="Password"
@@ -59,14 +59,14 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="remember-check">
                   <label class="form-check-label" for="remember-check">
-                      Remember me
+                    Recuérdame
                   </label>
               </div>
 
                 <div class="mt-3 d-grid">
-                  <button class="btn btn-primary" type="submit">Log In</button>
+                  <button class="btn btn-primary" type="submit">Iniciar sesión</button>
                 </div>
-                <div class="mt-4 text-center">
+                <!-- <div class="mt-4 text-center">
                   <h5 class="font-size-14 mb-3">Sign in with</h5>
 
                   <ul class="list-inline">
@@ -86,11 +86,9 @@
                       </a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
                 <div class="mt-4 text-center">
-                  <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot
-                    your
-                    password?</a>
+                  <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> ¿Olvidó su contraseña?</a>
                 </div>
               </form>
             </div>
@@ -98,10 +96,9 @@
           </div>
         </div>
         <div class="mt-5 text-center">
-          <p>Don't have an account ? <a routerLink="/account/signup" class="fw-medium text-primary"> Signup
-              now
+          <p>¿No tiene una cuenta? <a routerLink="/account/signup" class="fw-medium text-primary"> Regístrate ahora
             </a> </p>
-          <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+          <p>© {{year}} Midas Solutions Center.  Creado por <i class="mdi mdi-heart text-danger"></i> Jhoeky Tapia</p>
         </div>
 
       </div>
