Cambios en frontend

--- a/src/app/account/auth/passwordreset/passwordreset.component.html
+++ b/src/app/account/auth/passwordreset/passwordreset.component.html
@@ -7,8 +7,8 @@
             <div class="row">
               <div class="col-7">
                 <div class="text-primary p-4">
-                  <h5 class="text-primary"> Reset Password</h5>
-                  <p>Reset Password with Skote.</p>
+                  <h5 class="text-primary"> Restablecer la contraseña</h5>
+                  <p>Restablecer contraseña del  CRM.</p>
                 </div>
               </div>
               <div class="col-5 align-self-end">
@@ -29,7 +29,7 @@
 
             <div class="p-2">
               <div class="alert alert-success text-center mb-4" role="alert">
-                Enter your Email and instructions will be sent to you!
+                Introduzca su dirección de correo electrónico y le enviaremos las instrucciones.
               </div>
 
               <form class="needs-validation" name="resetForm" [formGroup]="resetForm" (ngSubmit)="onSubmit()" novalidate>
@@ -37,10 +37,10 @@
                 <alert type="danger" *ngIf="error" [dismissible]="false">{{ error }}</alert>
 
                 <div class="mb-3">
-                  <label for="email">Email</label>
+                  <label for="email">Correo Electrónico</label>
 
                   <input type="email" formControlName="email" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && f.email.errors }" id="email" placeholder="Enter email" />
+                    [ngClass]="{ 'is-invalid': submitted && f.email.errors }" id="email" placeholder="Ingresar Correo" />
 
                   <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                     <div *ngIf="f.email.errors.required">Email is required</div>
@@ -48,7 +48,7 @@
                   </div>
                 </div>
                 <div class="text-end">
-                  <button class="btn btn-primary w-md" type="submit">Reset</button>
+                  <button class="btn btn-primary w-md" type="submit">Restablecer</button>
                 </div>
               </form>
             </div>
@@ -57,8 +57,8 @@
         </div>
         <!-- end card -->
         <div class="mt-5 text-center">
-          <p>Remember It ? <a routerLink="/account/login" class="fw-medium text-primary"> Sign In here</a> </p>
-          <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+          <p>¿Lo recuerda?<a routerLink="/account/login" class="fw-medium text-primary"> Inicie sesión aquí</a> </p>
+          <p>© {{year}} Midas Solutions Center. Creado por  <i class="mdi mdi-heart text-danger"></i> Ozaru Telecom</p>
         </div>
 
       </div> <!-- end col -->
