Cambios en frontend 15 agosto

--- a/src/app/pages/dashboards/default/default.component.html
+++ b/src/app/pages/dashboards/default/default.component.html
@@ -4,14 +4,13 @@
     <div class="row">
         <div class="col-12">
             <div class="page-title-box d-flex align-items-center justify-content-between">
-                <h4 class="mb-0 font-size-18">Dashboard</h4>
+                <h4 class="mb-0 font-size-18">Cuadro de mando</h4>
                 <div class="page-title-right">
                     <ol class="breadcrumb m-0">
                         <ng-container>
-                            <li class="breadcrumb-item"><a href="javascript: void(0);">Dashboards</a>
+                            <li class="breadcrumb-item"><a href="javascript: void(0);">Cuadro de mando</a>
                             </li>
-                            <li class="breadcrumb-item active">Dashboard
-                            </li>
+                            <li class="breadcrumb-item active">Cuadro de mando</li>
                         </ng-container>
                     </ol>
                 </div>
