--- a/src/app/account/auth/signup/signup.component.html
+++ b/src/app/account/auth/signup/signup.component.html
@@ -44,37 +44,37 @@
                     placeholder="Ingresar Nombre" />
 
                   <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                    <div *ngIf="f.username.errors.required">Userame is required</div>
+                    <div *ngIf="f.username.errors.required">Nombre de usuario es obligatorio</div>
                   </div>
                 </div>
 
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
+                  <label for="email" class="form-label">Correo electrónico</label>
 
                   <input type="email" formControlName="email" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.email.errors }" id="email" placeholder="Email" />
 
                   <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                    <div *ngIf="f.email.errors.required">Email is required</div>
-                    <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                    <div *ngIf="f.email.errors.required">Correo electrónico es obligatorio</div>
+                    <div *ngIf="f.email.errors.email">El correo electrónico debe ser válido</div>
                   </div>
                 </div>
 
                 <div class="mb-3">
-                  <label for="password" class="form-label">Password</label>
+                  <label for="password" class="form-label">Contraseña</label>
 
                   <input type="password" formControlName="password" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password" placeholder="Password" />
+                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" id="password" placeholder="Contraseña" />
 
                   <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
+                    <div *ngIf="f.password.errors.required">La contraseña es obligatorio</div>
                   </div>
                 </div>
 
                 <div class="mt-4 d-grid">
-                  <button class="btn btn-primary" type="submit">Register</button>
+                  <button class="btn btn-primary" type="submit">Registrarse</button>
                 </div>
-                <div class="mt-4 text-center">
+                <!-- <div class="mt-4 text-center">
                   <h5 class="font-size-14 mb-3">Sign in with</h5>
 
                   <ul class="list-inline">
@@ -94,11 +94,10 @@
                       </a>
                     </li>
                   </ul>
-                </div>
+                </div> -->
                 <div class="mt-4 text-center">
-                  <p class="mb-0">By registering you agree to the Skote <a href="javascript: void(0);"
-                      class="text-primary">Terms of
-                      Use</a></p>
+                  <p class="mb-0">Al registrarse usted acepta los Terminos <a href="javascript: void(0);"
+                      class="text-primary">Condiciones de uso</a></p>
                 </div>
               </form>
             </div>
@@ -107,9 +106,9 @@
         <!-- end card -->
 
         <div class="mt-5 text-center">
-          <p>Already have an account ? <a routerLink="/account/login" class="fw-medium text-primary"> Login</a>
+          <p>¿Ya tiene una cuenta? <a routerLink="/account/login" class="fw-medium text-primary"> Iniciar sesión</a>
           </p>
-          <p>© {{year}} Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+          <p>© {{year}} Midas Solutions Center. Desarrollado por<i class="mdi mdi-heart text-danger"></i> Mailis Tapia</p>
         </div>
       </div> <!-- end col -->
     </div>
