--- a/src/app/layouts/rightsidebar/rightsidebar.component.html
+++ b/src/app/layouts/rightsidebar/rightsidebar.component.html
@@ -7,9 +7,9 @@
       <a href="javascript:void(0);" class="right-bar-toggle float-end" (click)="hide();">
         <i class="mdi mdi-close noti-icon"></i>
       </a>
-      <h5 class="m-0">Settings</h5>
+      <h5 class="m-0">Configuraciones</h5>
 
-      <h6 class="mt-4 mb-3">Layout</h6>
+      <h6 class="mt-4 mb-3">Diseño</h6>
       <hr />
 
       <div class="form-check form-switch">
@@ -17,54 +17,54 @@
         <label class="form-check-label" for="is-layout">{{ attribute == 'vertical' ? 'vertical' : 'horizontal'
           }}</label>
       </div>
-      <h6 class="mt-4 mb-3">Width</h6>
+      <h6 class="mt-4 mb-3">Ancho</h6>
       <hr />
       <div class="form-check">
         <input class="form-check-input" type="radio" name="layout-width" id="layout-width-fuild" value="fluid"
           [checked]="width === 'fluid'" (change)="changeWidth('fluid')">
-        <label class="form-check-label" for="layout-width-fuild">Fluid</label>
+        <label class="form-check-label" for="layout-width-fuild">Fluido</label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="layout-width" id="layout-width-boxed" value="boxed"
           [checked]="width === 'boxed'" (change)="changeWidth('boxed')">
-        <label class="form-check-label" for="layout-width-boxed">Boxed</label>
+        <label class="form-check-label" for="layout-width-boxed">En caja</label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="radio" name="layout-width" id="layout-width-scrollable" value="scrollable"
           [checked]="width === 'scrollable'" (change)="changeWidth('scrollable')">
-        <label class="form-check-label" for="layout-width-scrollable">Scrolable</label>
+        <label class="form-check-label" for="layout-width-scrollable">Desplazables</label>
       </div>
       <div *ngIf="attribute == 'vertical'">
-        <h6 class="mt-4 mb-3">Sidebar Color</h6>
+        <h6 class="mt-4 mb-3">Color de la barra lateral</h6>
         <hr />
         <div class="form-check sidebar-setting">
           <input class="form-check-input" type="radio" name="sidebar-color" id="sidebar-color-light" value="light"
             [checked]="sidebartype === 'light'" (change)="changeSidebartype('light')">
-          <label class="form-check-label" for="sidebar-color-light">Light</label>
+          <label class="form-check-label" for="sidebar-color-light">Iluminación</label>
         </div>
         <div class="form-check sidebar-setting">
           <input class="form-check-input" type="radio" name="sidebar-color" id="sidebar-color-dark" value="dark"
             [checked]="sidebartype === 'dark'" (change)="changeSidebartype('dark')">
-          <label class="form-check-label" for="sidebar-color-dark">Dark</label>
+          <label class="form-check-label" for="sidebar-color-dark">Oscuro</label>
         </div>
         <div class="form-check sidebar-setting">
           <input class="form-check-input" type="radio" name="sidebar-color" id="sidebar-color-brand" value="compact"
             [checked]="sidebartype === 'compact'" (change)="changeSidebartype('compact')">
-          <label class="form-check-label" for="sidebar-color-brand">Compact</label>
+          <label class="form-check-label" for="sidebar-color-brand">Compacto</label>
         </div>
         <div class="form-check sidebar-setting">
           <input class="form-check-input" type="radio" name="sidebar-color" id="sidebar-color-icon" value="icon"
             [checked]="sidebartype === 'icon'" (change)="changeSidebartype('icon')">
-          <label class="form-check-label" for="sidebar-color-icon">Icon</label>
+          <label class="form-check-label" for="sidebar-color-icon">Ícono</label>
         </div>
         <div class="form-check sidebar-setting">
           <input class="form-check-input" type="radio" name="sidebar-color" id="sidebar-color" value="colored"
             [checked]="sidebartype === 'colored'" (change)="changeSidebartype('colored')">
-          <label class="form-check-label" for="sidebar-color">Colored</label>
+          <label class="form-check-label" for="sidebar-color">Coloreado</label>
         </div>
       </div>
 
-      <h6 class="mt-4 mb-3">Theme Mode</h6>
+      <h6 class="mt-4 mb-3">Modo temático</h6>
       <hr />
       <div class="form-check sidebar-setting">
         <input class="form-check-input" type="radio" name="theme-color" id="theme-color-light"
@@ -74,7 +74,7 @@
       <div class="form-check sidebar-setting">
         <input class="form-check-input" type="radio" name="theme-color" id="theme-color-dark"
           [checked]="mode === 'dark'" (change)="changeMode('dark')">
-        <label class="form-check-label" for="theme-color-dark">Dark</label>
+        <label class="form-check-label" for="theme-color-dark">Oscuro</label>
       </div>
 
       <div *ngIf="attribute !== 'vertical'">
@@ -88,7 +88,7 @@
         <div class="form-check">
           <input class="form-check-input" type="radio" name="topbar-color" id="topbar-color-dark" value="dark"
             [checked]="topbar === 'dark'" (change)="changeTopbar('dark')">
-          <label class="form-check-label" for="topbar-color-dark">Dark</label>
+          <label class="form-check-label" for="topbar-color-dark">Oscuro</label>
         </div>
         <div class="form-check">
           <input class="form-check-input" type="radio" name="topbar-color" id="topbar-color-colored" value="colored"
@@ -96,7 +96,7 @@
           <label class="form-check-label" for="topbar-color-colored">Colored</label>
         </div>
       </div>
-      <h6 class="text-center mb-0 mt-4">Choose Layouts</h6>
+      <h6 class="text-center mb-0 mt-4">Elegir diseños</h6>
       <div class="p-4">
         <div class="mb-2">
           <a href="//skote-v-light.angular.themesbrand.com/" target="_blank">
