--- a/src/app/shared/widget/transaction/transaction.component.html
+++ b/src/app/shared/widget/transaction/transaction.component.html
@@ -8,7 +8,7 @@
             <label class="form-check-label" for="transactionCheck01"></label>
           </div>
         </th>
-        <th class="align-middle">Order ID</th>
+        <th class="align-middle">Número de pedido</th>
         <th class="align-middle">Billing Name</th>
         <th class="align-middle">Date</th>
         <th class="align-middle">Total</th>
