--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -21,7 +21,7 @@
               <a routerLink="/">
                 <div class="avatar-md profile-user-wid mb-4">
                   <span class="avatar-title rounded-circle bg-light">
-                    <img src="assets/images/logo.svg" alt="" class="rounded-circle" height="22">
+                    <img src="assets/images/logo.svg" alt="" height="22">
                   </span>
                 </div>
               </a>
@@ -33,7 +33,7 @@
 
                 <div class="mb-3">
                   <label for="email">Correo</label>
-                  <input type="email" formControlName="email" class="form-control" id="email" placeholder="Email"
+                  <input type="email" formControlName="email" class="form-control" id="email" placeholder="Correo electrónico"
                     [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                   <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                     <div *ngIf="f.email.errors.required">Email is required</div>
@@ -44,12 +44,14 @@
                 <div class="mb-3">
                   <label for="password">Contraseña</label>
                   <div class="input-group auth-pass-inputgroup">
-                    <input type="password" class="form-control" formControlName="password" placeholder="Enter password"
+                    <input [type]="showPassword? 'text': 'password'" class="form-control" formControlName="password" placeholder="Enter contraseña"
                       [ngClass]="{ 'is-invalid': submitted && f.password.errors }" aria-label="Password"
                       aria-describedby="password-addon">
 
-                    <button class="btn btn-light ms-0" type="button" id="password-addon"><i
-                        class="mdi mdi-eye-outline"></i></button>
+                    <button class="btn btn-light ms-0" type="button" id="password-addon" (click)="toggleShowPassword()">
+                      <!-- <i class="mdi mdi-eye-outline"></i> -->
+                      <i class="mdi" [ngClass]="showPassword ? 'mdi-eye-off-outline' : 'mdi-eye-outline'"></i>
+                    </button>
                     <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                       <span *ngIf="f.password.errors.required">Password is required</span>
                     </div>
