--- a/src/app/layouts/rightsidebar/rightsidebar.component.html
+++ b/src/app/layouts/rightsidebar/rightsidebar.component.html
@@ -9,14 +9,14 @@
       </a>
       <h5 class="m-0">Configuraciones</h5>
 
-      <h6 class="mt-4 mb-3">Diseño</h6>
+      <!-- <h6 class="mt-4 mb-3">Diseño</h6>
       <hr />
 
       <div class="form-check form-switch">
         <input class="form-check-input" type="checkbox" id="is-layout" (click)="changeLayout($event)">
         <label class="form-check-label" for="is-layout">{{ attribute == 'vertical' ? 'vertical' : 'horizontal'
           }}</label>
-      </div>
+      </div> -->
       <h6 class="mt-4 mb-3">Ancho</h6>
       <hr />
       <div class="form-check">
@@ -24,11 +24,11 @@
           [checked]="width === 'fluid'" (change)="changeWidth('fluid')">
         <label class="form-check-label" for="layout-width-fuild">Fluido</label>
       </div>
-      <div class="form-check">
+      <!-- <div class="form-check">
         <input class="form-check-input" type="radio" name="layout-width" id="layout-width-boxed" value="boxed"
           [checked]="width === 'boxed'" (change)="changeWidth('boxed')">
         <label class="form-check-label" for="layout-width-boxed">En caja</label>
-      </div>
+      </div> -->
       <div class="form-check">
         <input class="form-check-input" type="radio" name="layout-width" id="layout-width-scrollable" value="scrollable"
           [checked]="width === 'scrollable'" (change)="changeWidth('scrollable')">
@@ -57,11 +57,11 @@
             [checked]="sidebartype === 'icon'" (change)="changeSidebartype('icon')">
           <label class="form-check-label" for="sidebar-color-icon">Ícono</label>
         </div>
-        <div class="form-check sidebar-setting">
+        <!-- <div class="form-check sidebar-setting">
           <input class="form-check-input" type="radio" name="sidebar-color" id="sidebar-color" value="colored"
             [checked]="sidebartype === 'colored'" (change)="changeSidebartype('colored')">
           <label class="form-check-label" for="sidebar-color">Coloreado</label>
-        </div>
+        </div> -->
       </div>
 
       <h6 class="mt-4 mb-3">Modo temático</h6>
@@ -94,24 +94,6 @@
           <input class="form-check-input" type="radio" name="topbar-color" id="topbar-color-colored" value="colored"
             [checked]="topbar === 'colored'" (change)="changeTopbar('colored')">
           <label class="form-check-label" for="topbar-color-colored">Colored</label>
-        </div>
-      </div>
-      <h6 class="text-center mb-0 mt-4">Elegir diseños</h6>
-      <div class="p-4">
-        <div class="mb-2">
-          <a href="//skote-v-light.angular.themesbrand.com/" target="_blank">
-            <img src="assets/images/layouts/layout-1.jpg" class="img-fluid img-thumbnail" alt="">
-          </a>
-        </div>
-        <div class="mb-2">
-          <a href="//skote-v-dark.angular.themesbrand.com/" target="_blank">
-            <img src="assets/images/layouts/layout-2.jpg" class="img-fluid img-thumbnail" alt="">
-          </a>
-        </div>
-        <div class="mb-2">
-          <a href="//skote-v-rtl.angular.themesbrand.com/" target="_blank">
-            <img src="assets/images/layouts/layout-3.jpg" class="img-fluid img-thumbnail" alt="">
-          </a>
         </div>
       </div>
     </div>
