Componente de estado añadidos

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -67,8 +67,8 @@
           <!-- item-->
           <a href="javascript:void(0);" class="dropdown-item notify-item" *ngFor="let item of listLang"
             (click)="setLanguage(item.text, item.lang, item.flag)" [ngClass]="{'active': cookieValue === item.lang}">
-            <img src="{{item.flag}}" alt="user-image" class="me-1" height="12"> <span
-              class="align-middle">{{item.text}}</span>
+            <img src="{{item.flag}}" alt="user-image" class="me-1" height="12"> 
+            <span class="align-middle">{{item.text}}</span>
           </a>
           <!-- item-->
         </div>
@@ -81,7 +81,7 @@
       </div>
 
       <div class="dropdown d-inline-block" dropdown>
-        <button type="button" class="btn header-item noti-icon" id="page-header-notifications-dropdown"
+        <button type="button" class="btn header-item noti-icon position-relative" id="page-header-notifications-dropdown"
           dropdownToggle>
           <i class="bx bx-bell bx-tada"></i>
           <span class="badge bg-danger rounded-pill">3</span>
