Cambios en mantenimiento tipo de docuemntos y tipo de cuentas

--- a/src/app/pages/maintenance/type-status/type-status.component.html
+++ b/src/app/pages/maintenance/type-status/type-status.component.html
@@ -1,2 +1,9 @@
 <p>type-status works!</p>
 <h3>Hola</h3>
+<button type="button" class="btn btn-sm btn-success" (click)="openModal()">Abrir modal</button>
+
+<app-modal [title]="'Modal'">
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique hic porro eligendi delectus ipsum nemo, repudiandae vitae necessitatibus. Ipsum quos facilis debitis voluptas nihil ullam odit animi cumque nobis rem autem amet iste, neque vero? Quod explicabo nemo ad debitis quo commodi aliquid optio, a quibusdam hic perspiciatis eaque alias.
+  </p>
+</app-modal>
