--- a/src/app/pages/maintenance/type-user/type-user.component.html
+++ b/src/app/pages/maintenance/type-user/type-user.component.html
@@ -10,6 +10,14 @@
             <div class="flex-shrink-0 d-flex gap-1">
               <a href="javascript:void(0);" class="btn btn-primary" (click)="openModal(content)">Agregar nuevo</a>
               <a href="javascript:void(0);" (click)="listDataApi(true);" class="btn btn-light"><i class="mdi mdi-refresh"></i></a>
+              <!-- <div class="dropdown d-inline-block" dropdown>
+                <button type="menu" class="btn btn-success" id="*dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false" dropdownToggle><i class="mdi mdi-dots-vertical"></i></button>
+                <ul class="dropdown-menu dropdown-menu dropdown-menu-end show" aria-labelledby="*dropdownMenuButton1" *dropdownMenu>
+                  <li><a class="dropdown-item" href="javascript:void(0);">Action</a></li>
+                  <li><a class="dropdown-item" href="javascript:void(0);">Another action</a></li>
+                  <li><a class="dropdown-item" href="javascript:void(0);">Something else here</a></li>
+                </ul>
+              </div> -->
             </div>
           </div>
         </div>
@@ -65,7 +73,7 @@
     <h5 class="modal-title" id="exampleModalLabel">{{dataModal.title}}</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modalRef?.hide()"></button>
   </div>
-  <form (keydown.enter)="$event.preventDefault()" [formGroup]="typeStatusForm" autocomplete="off">
+  <form (keydown.enter)="$event.preventDefault()" [formGroup]="typeUserForm" autocomplete="off">
     <div class="modal-body">
       <input type="hidden" name="id" value="" formControlName="id" />
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
