--- a/src/app/pages/maintenance/type-service/type-service.component.html
+++ b/src/app/pages/maintenance/type-service/type-service.component.html
@@ -65,7 +65,7 @@
     <h5 class="modal-title" id="exampleModalLabel">{{dataModal.title}}</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="modalRef?.hide()"></button>
   </div>
-  <form (keydown.enter)="$event.preventDefault()" [formGroup]="typeStatusForm" autocomplete="off">
+  <form (keydown.enter)="$event.preventDefault()" [formGroup]="typeServiceForm" autocomplete="off">
     <div class="modal-body">
       <input type="hidden" name="id" value="" formControlName="id" />
       <div class="mb-3" *ngIf="'FORMS.FIELD_NAMES.name.label' | translate as translatedLabel;">
