--- a/src/app/pages/maintenance/group/group.component.html
+++ b/src/app/pages/maintenance/group/group.component.html
@@ -262,7 +262,8 @@
                 <!-- Pagination -->
                 <div class="col-sm-12 col-md-5">
                   <div class="text-md-right float-md-end pagination-rounded">
-                    <pagination [totalItems]="pagination.total" [(ngModel)]="page" previousText="Anterior" nextText="Siguiente"></pagination>
+                    <pagination [(ngModel)]="page" previousText="Anterior" nextText="Siguiente">
+                    </pagination>
                   </div>
                 </div>
                 <!-- End Pagination -->
