--- a/src/app/pages/maintenance/country/country.component.html
+++ b/src/app/pages/maintenance/country/country.component.html
@@ -51,6 +51,7 @@
                     </div>
                   </td>
                 </tr>
+                <tr *ngIf="!lists.length"><td colspan="6" class="text-center">Sin registros.</td></tr>
               </tbody>
             </table>
           </div>
