--- a/src/app/pages/maintenance/promotion/promotion.component.html
+++ b/src/app/pages/maintenance/promotion/promotion.component.html
@@ -57,6 +57,7 @@
                     </ul>
                   </td>
                 </tr>
+                <tr *ngIf="!lists.length"><td colspan="11" class="text-center">Sin registros.</td></tr>
               </tbody>
             </table>
           </div>
