--- a/src/app/pages/maintenance/campus/campus.component.html
+++ b/src/app/pages/maintenance/campus/campus.component.html
@@ -53,6 +53,7 @@
                     </ul>
                   </td>
                 </tr>
+                <tr *ngIf="!lists.length"><td colspan="9" class="text-center">Sin registros.</td></tr>
               </tbody>
             </table>
           </div>
