--- a/src/app/pages/maintenance/type-bank-account/type-bank-account.component.html
+++ b/src/app/pages/maintenance/type-bank-account/type-bank-account.component.html
@@ -51,6 +51,7 @@
                     </ul>
                   </td>
                 </tr>
+                <tr *ngIf="!lists.length"><td colspan="8" class="text-center">Sin registros.</td></tr>
               </tbody>
             </table>
           </div>
