--- a/src/app/pages/maintenance/type-user/type-user.component.html
+++ b/src/app/pages/maintenance/type-user/type-user.component.html
@@ -49,6 +49,7 @@
                     </ul>
                   </td>
                 </tr>
+                <tr *ngIf="!lists.length"><td colspan="7" class="text-center">Sin registros.</td></tr>
               </tbody>
             </table>
           </div>
